Fix overflow

--- a/styles/index.css
+++ b/styles/index.css
@@ -745,7 +745,7 @@ li[data-icon]::before {
 :is( [role=marquee], [role=log] ):hover li { opacity: 0.5 }
 :is( [role=marquee], [role=log] ) li:hover { opacity: 1 }
 [role=marquee][aria-orientation=horizontal] {
-  overflow-x: auto;
+  overflow: auto hidden;
   flex-wrap: nowrap;
   font-size: larger;
   margin-left: auto;
